btn-light__text, btn-light__text-wrapper

--- a/account/edit-photo.html
+++ b/account/edit-photo.html
@@ -1079,7 +1079,7 @@
          </div>
          <div class="_dhkcqx">
           <div style="margin-bottom: 16px;">
-           <a href="/help" class="_6niksfg" aria-busy="false"><span class="_ftj2sg4">Visit the Help Center</span></a>
+           <a href="/help" class="_6niksfg" aria-busy="false"><span class="btn-light__text-wrapper">Visit the Help Center</span></a>
           </div>
           <div class="_1jlnvra2">
            <div class="_76g5l9"><a href="/help/feedback" class="_12jvhwr" aria-busy="false">Give feedback</a></div>
