--- a/full-screen-hero.html
+++ b/full-screen-hero.html
@@ -116,8 +116,8 @@
                               <div style="margin-bottom: 48px;">
                                <div>
                                 <a href="/get-help-hosting" class="btn-light" aria-describedby="subtitle-263260" aria-busy="false">
-                                 <span class="_ftj2sg4">
-                                  <div class="_1p3joamp"><div>Estimate your earnings</div></div>
+                                 <span class="btn-light__text-wrapper">
+                                  <div class="btn-light__text"><div>Estimate your earnings</div></div>
                                  </span>
                                 </a>
                                </div>
