--- a/landing-pages/social-impact-host.html
+++ b/landing-pages/social-impact-host.html
@@ -1893,7 +1893,7 @@ Harlem, New York City"
                                       >
                                         <div class="_ir2o62c">
                                           <div>
-                                            <span class="_1p3joamp"
+                                            <span class="btn-light__text"
                                               ><button
                                                 type="button"
                                                 class="_b0ybw8s"
@@ -1975,7 +1975,7 @@ Harlem, New York City"
                                       >
                                         <div class="_ir2o62c">
                                           <div>
-                                            <span class="_1p3joamp"
+                                            <span class="btn-light__text"
                                               ><button
                                                 type="button"
                                                 class="_b0ybw8s"
@@ -2083,7 +2083,7 @@ Harlem, New York City"
                                       >
                                         <div class="_ir2o62c">
                                           <div>
-                                            <span class="_1p3joamp"
+                                            <span class="btn-light__text"
                                               ><button
                                                 type="button"
                                                 class="_b0ybw8s"
@@ -2163,7 +2163,7 @@ Harlem, New York City"
                                       >
                                         <div class="_ir2o62c">
                                           <div>
-                                            <span class="_1p3joamp"
+                                            <span class="btn-light__text"
                                               ><button
                                                 type="button"
                                                 class="_b0ybw8s"
@@ -2268,7 +2268,7 @@ Harlem, New York City"
                                       >
                                         <div class="_ir2o62c">
                                           <div>
-                                            <span class="_1p3joamp"
+                                            <span class="btn-light__text"
                                               ><button
                                                 type="button"
                                                 class="_b0ybw8s"
@@ -2352,7 +2352,7 @@ Harlem, New York City"
                                       >
                                         <div class="_ir2o62c">
                                           <div>
-                                            <span class="_1p3joamp"
+                                            <span class="btn-light__text"
                                               ><button
                                                 type="button"
                                                 class="_b0ybw8s"
@@ -2446,7 +2446,7 @@ Harlem, New York City"
                                       >
                                         <div class="_ir2o62c">
                                           <div>
-                                            <span class="_1p3joamp"
+                                            <span class="btn-light__text"
                                               ><button
                                                 type="button"
                                                 class="_b0ybw8s"
@@ -2540,7 +2540,7 @@ Harlem, New York City"
                                       >
                                         <div class="_ir2o62c">
                                           <div>
-                                            <span class="_1p3joamp"
+                                            <span class="btn-light__text"
                                               ><button
                                                 type="button"
                                                 class="_b0ybw8s"
