--- a/messaging/messages.html
+++ b/messaging/messages.html
@@ -3933,7 +3933,7 @@
                                           <div class="_14t73ln">
                                             <div class="_1usfdv82">
                                               <div style="margin-bottom: 4px;">
-                                                <div class="_1p3joamp">Perfect Work From Home Loft ++ Mountain Views
+                                                <div class="btn-light__text">Perfect Work From Home Loft ++ Mountain Views
                                                   2B17</div>
                                               </div>
                                               <div class="_1jlnvra2">Entire condo · Baguio, Cordillera Administrative
@@ -4083,9 +4083,9 @@
                                         <div>
                                           <div class="_hgs47m">
                                             <div class="_10ejfg4u">
-                                              <div class="_1p3joamp"><span>Total</span></div>
+                                              <div class="btn-light__text"><span>Total</span></div>
                                             </div>
-                                            <div class="cell-middle"><span class="_1p3joamp"><span
+                                            <div class="cell-middle"><span class="btn-light__text"><span
                                                   class="_j1kt73">₱7,189.42</span></span>
                                             </div>
                                           </div>
@@ -4100,7 +4100,7 @@
                                           <div class="_hgs47m">
                                             <div class="_10ejfg4u">
                                               <div style="margin-bottom: 4px;">
-                                                <div class="_1p3joamp">Always communicate through Airbnb</div>
+                                                <div class="btn-light__text">Always communicate through Airbnb</div>
                                               </div>
                                               <div class="hero__title">To protect your payment, never transfer money or
                                                 communicate outside of the
