--- a/landing-pages/full-screen-hero.html
+++ b/landing-pages/full-screen-hero.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Management Service for Hosts in Antibes - Airbnb</title>
 
-    <link rel="stylesheet" href="./assets/css/global.css" />
-    <link rel="stylesheet" href="./assets/css/pages.css" />
+    <link rel="stylesheet" href="../assets/css/global.css" />
+    <link rel="stylesheet" href="../assets/css/pages.css" />
   </head>
 
   <body class="with-new-header">
