Fix exit full screen icon

--- a/listings-product/online-experience.html
+++ b/listings-product/online-experience.html
@@ -641,12 +641,12 @@
                             <div class="inline-block" style="margin-left: 30px;"> <button data-button="play" id='playButton2' type="button" class="_1rp5252"
                                 aria-busy="false" style="padding: 12px; margin: -12px;"><svg id='playButtonIcon2' viewBox="0 0 11 14"
                                   role="img" aria-hidden="true" aria-label="Play" focusable="false"
-                                  style="height: 15px; width: 15px; display: block; fill: white;">
+                                  style="height: 15px; width: 15px; display: none; fill: white;">
                                   <path
                                     d="m0 .63c0-.51.57-.81.99-.52l9.64 6.17c.49.35.49 1.08 0 1.43l-9.64 6.17c-.42.3-.99 0-.99-.52z"
                                     fill-rule="evenodd"></path>
                                 </svg>
-                                <svg id='pauseButtonIcon2' viewBox="0 0 11 14" role="img" aria-hidden="true" aria-label="Pause" focusable="false" style="height: 15px; width: 15px; display: none; fill: white;"><path d="m0 1.01c0-.56.44-1.01 1.01-1.01h1.98c.56 0 1.01.45 1.01 1.01v11.98c0 .56-.44 1.01-1.01 1.01h-1.98c-.56 0-1.01-.45-1.01-1.01zm7 0c0-.56.44-1.01 1.01-1.01h1.98c.56 0 1.01.45 1.01 1.01v11.98c0 .56-.44 1.01-1.01 1.01h-1.98c-.56 0-1.01-.45-1.01-1.01z" fill-rule="evenodd"></path></svg>
+                                <svg id='pauseButtonIcon2' viewBox="0 0 11 14" role="img" aria-hidden="true" aria-label="Pause" focusable="false" style="height: 15px; width: 15px; display: block; fill: white;"><path d="m0 1.01c0-.56.44-1.01 1.01-1.01h1.98c.56 0 1.01.45 1.01 1.01v11.98c0 .56-.44 1.01-1.01 1.01h-1.98c-.56 0-1.01-.45-1.01-1.01zm7 0c0-.56.44-1.01 1.01-1.01h1.98c.56 0 1.01.45 1.01 1.01v11.98c0 .56-.44 1.01-1.01 1.01h-1.98c-.56 0-1.01-.45-1.01-1.01z" fill-rule="evenodd"></path></svg>
                               </button></div>
                             <div class="inline-block" style="margin-left: 30px;"> <button data-button="full-screen" id='fullScreenButton2' type="button" class="_1rp5252"
                                 aria-busy="false" style="padding: 12px; margin: -12px;"><svg viewBox="0 0 18 18"
@@ -22233,14 +22233,14 @@ Great for Team Building" class="l4a2xp4 dir dir-ltr" data-check-info-section="tr
                 <div class="_pj4gqq" style="left: 100%;"></div>
               </div>
             </div>
-            <div class="_uplvmw"><button data-button="full-screen" aria-label="Full screen" type="button"
-                class="_4ijurz"><span class="relative"><svg viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg"
-                    aria-hidden="true" role="presentation" focusable="false"
-                    style="display: block; height: 16px; width: 16px; fill: rgb(255, 255, 255);">
-                    <path
-                      d="m6.293 8.293 1.414 1.414-3.793 3.793h3.086v2h-5c-.38261 0-.75076-.1462-1.02913-.4086-.278373-.2625-.445924-.6215-.46837-1.0034l-.0025-.088v-5h2v3.085zm7.707-7.793c.3826-.000021.7508.146163 1.0291.408642.2784.262478.446.621408.4684 1.003358l.0025.088v5h-2v-3.086l-3.793 3.793-1.414-1.414 3.792-3.793h-3.085v-2z">
-                    </path>
-                  </svg></span></button></div>
+            <div class="_uplvmw"><button data-button="full-screen" aria-label="Full screen" type="button" class="_4ijurz"><span class="relative">
+                <svg viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" role="presentation" focusable="false"
+                  style="display: block; height: 16px; width: 16px; fill: rgb(255, 255, 255);">
+                  <path
+                    d="m2.207 15.207-1.414-1.414 3.793-3.793h-3.086v-2h5c.38261 0 .75076.1462 1.02913.4086.278373.2625.445924.6215.46837 1.0034l.0025.088v5h-2v-3.085zm7.293-7.207c-.3826 0-.7508-.146163-1.0291-.408642-.2784-.262478-.446-.621408-.4684-1.003358l-.0025-.088v-5h2v3.086l3.793-3.793 1.414 1.414-3.792 3.793h3.085v2z">
+                  </path>
+                </svg>
+              </span></button></div>
           </div>
         </div>
       </div>
