--- a/listings-product/online-experience.html
+++ b/listings-product/online-experience.html
@@ -395,7 +395,7 @@
               <div class="_rm1dhy" style="transform: translateX(0%);">
                 <div class="_1hxk8lj" aria-hidden="false" aria-label="Media number 1">
                   <div class="become-a-host__video-content">
-                      <video id='videoplayer2' class="_e2l2kr" autoplay="" crossorigin="anonymous" playsinline="" preload="metadata" style="object-fit: cover;">
+                      <video id='videoplayer2' class="_e2l2kr" autoplay="" muted="" crossorigin="anonymous" playsinline="" preload="metadata" style="object-fit: cover;">
                         <source src="https://a0.muscache.com/v/ff/8f/ff8fec7b-c23a-542b-b102-c474e9481b6d/ff8fec7bc23a542bb102c474e9481b6d_4000k_1.mp4">
                       </video>
                     <div></div>
@@ -8928,7 +8928,7 @@ Great for Team Building" class="l4a2xp4 dir dir-ltr" data-check-info-section="tr
               <div class="_1oaklsk" style="overflow: hidden; padding-top: 67%;">
                 <div class="_skzmvy">
                   <div class="become-a-host__video-content">
-                    <video id='videoplayer1' class="_e2l2kr" autoplay="" crossorigin="anonymous" playsinline="" preload="metadata" style="object-fit: cover;">
+                    <video id='videoplayer1' class="_e2l2kr" autoplay="" muted="" crossorigin="anonymous" playsinline="" preload="metadata" style="object-fit: cover;">
                       <source src="https://a0.muscache.com/v/ff/8f/ff8fec7b-c23a-542b-b102-c474e9481b6d/ff8fec7bc23a542bb102c474e9481b6d_4000k_1.mp4">
                     </video>
                     <div dir="ltr">
@@ -21952,7 +21952,7 @@ Great for Team Building" class="l4a2xp4 dir dir-ltr" data-check-info-section="tr
                                       <div class="_979xgi">
                                         <div class="_cc3ww6">
                                           <div class="become-a-host__video-content">
-                                            <video class="_e2l2kr" autoplay="" crossorigin="anonymous" playsinline=""
+                                            <video class="_e2l2kr" autoplay="" muted="" crossorigin="anonymous" playsinline=""
                                               preload="auto" style="object-fit: scale-down;">
                                               <source
                                                 src="https://a0.muscache.com/v/ff/8f/ff8fec7b-c23a-542b-b102-c474e9481b6d/ff8fec7bc23a542bb102c474e9481b6d_4000k_1.mp4">
@@ -22541,7 +22541,7 @@ Great for Team Building" class="l4a2xp4 dir dir-ltr" data-check-info-section="tr
 
 <div id="full-screen-target" style="height: 0;">
   <div class="become-a-host__video-content">
-    <video class="_e2l2kr" autoplay="" crossorigin="anonymous" playsinline="" preload="auto"
+    <video class="_e2l2kr" autoplay="" muted="" crossorigin="anonymous" playsinline="" preload="auto"
       style="object-fit: scale-down;">
       <source
         src="https://a0.muscache.com/v/ff/8f/ff8fec7b-c23a-542b-b102-c474e9481b6d/ff8fec7bc23a542bb102c474e9481b6d_4000k_1.mp4">
